updating data with headbutt and repel

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ body {
   padding: 20px;
 
 
-  background-image: url('/wallpaperflare.com_wallpaper.jpg');
+  background-image: url('/wallpaperflare.com_wallpaper_2.jpg');
   background-size: cover; /* This will scale the image to cover the entire container */
   background-position: center; /* This will center the image in the container */
   background-repeat: no-repeat; /* This will prevent the image from repeating */
